Added cloud9 and windows to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,32 @@ bower_components/
 
 build/
 dist/
+
+# ---------------------------
+# Cloud9 IDE - http://c9.io
+# ---------------------------
+
+.c9revisions
+.c9
+
+# ---------------------------
+# Windows image file caches
+# ---------------------------
+
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
